[build-system]
requires = ["poetry-core>=1.8.0", "wheel",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dual-robot"
version = "0.1.0"
description = "Dual Arm Coordinated Trajectory Helper Functions."

packages = [
    { include = "dual_robot", from = "src" },
    { include = "redundancy_resolution_dual", from = "src" }
]

authors = ["Honglu He <heh6@rpi.edu>",]
maintainers = ["Honglu He <heh6@rpi.edu>",]

include = ["CHANGELOG.md", "LICENSE", "py.typed",]
license = "BSD-3-Clause"
readme = "README.md"

repository = "https://github.com/hehonglu123/dual_robot"


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "<2.0.0"
general_robotics_toolbox = "^0.7.2"
qpsolvers = "^4.3.2"
